Show version control overlays on top of everything except when a progress widget is visible in which case show the overlays behind the project picker

--- a/editor/sass/editor.scss
+++ b/editor/sass/editor.scss
@@ -9187,6 +9187,11 @@ strong {
 }
 
 .ui-overlay.version-control-overlay {
+    z-index: 9999; // just below the confirm picker
+    &.show-behind-picker {
+        z-index: 299; // just below project picker
+    }
+
     > .content {
         width: 500px;
         left: calc(50% - 250px);
