Do not allow global hotkeys to work if editor-blocking pickers are open, Change Enter key to add new line in new checkpoint description field, Added Ctrl+S to create new checkpoint

--- a/editor/sass/editor.scss
+++ b/editor/sass/editor.scss
@@ -4315,7 +4315,7 @@ strong {
     background-color: transparent;
 
     > .content {
-        > .project-name, > .scene-name, > .scene-list {
+        > .project-name, > .scene-name, , > .branch-name,  > .scene-list {
             height: 33px;
             min-height: 33px;
             line-height: 34px;
@@ -4347,6 +4347,10 @@ strong {
 
         > .scene-name:before {
             content: '\E134';
+        }
+
+        > .branch-name:before {
+            content: '\E399';
         }
 
         > .scene-list {
