Completely hide branches from version control picker if user doesn't have the 'hasBranches' flag

--- a/editor/sass/editor.scss
+++ b/editor/sass/editor.scss
@@ -8449,6 +8449,7 @@ strong {
                     place-content: flex-start;
 
                     > .side-panel-widget {
+                        flex-grow: 1;
                         > .content {
                             > .ui-panel {
                                 padding: 20px;
