Handle branch.open messenger message in the version control picker, Better handling of branch.close message via the picker, Make version control dropdown menus all caps, Show Today header instead of date if a checkpoint was made today

--- a/editor/sass/partials/_version-control.scss
+++ b/editor/sass/partials/_version-control.scss
@@ -148,3 +148,10 @@
         }
     }
 }
+
+.ui-menu.version-control {
+    .ui-menu-item {
+        text-transform: uppercase;
+        font-size: 12px;
+    }
+}
